Finally collisions among spheres achieved

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         }
     }
     </script>
-    <script type="module" src="PhysicsSim.js"></script>
+    <script type="module" src="ScenePhysics.js"></script>
+    <script type="module" src="ObjectPhysics.js"></script>
+
     <script type="module" src="ShapeGenerator.js"></script>
     <script type="module" src="main.js"></script>
 </body>
