--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="module" src="ObjectPhysics.js"></script>
 
     <script type="module" src="ShapeGenerator.js"></script>
+    <script type="module" src="ScenearyGenerator.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
